last commit so I can work on it hopefullyat home

--- a/style.css
+++ b/style.css
@@ -24,3 +24,8 @@ background-color: lightcoral;
     color: beige;
     font-family: 'Courier New', Courier, monospace;
 }
+
+.lmao{
+    color:orange;
+    background-color: yellow;
+}
